nav button alignment fix

--- a/src/styles/Navigation.module.scss
+++ b/src/styles/Navigation.module.scss
@@ -67,6 +67,7 @@
     .terra_link {
       height: 30px;
       display: flex;
+      align-items: center;
       gap: 8px;
       padding: 0.5rem 1rem;
       font-size: 12px;
